<resources>
    <string name="app_name">Laborator-1-android</string>
    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="username_too_short">Username is too short</string>
    <string name="password_wrong">Password is wrong</string>
    <string name="login_msg_success">Login successful</string>
    <string name="login_msg_error">Username or password is wrong</string>
    <string name="password_not_empty">Password must not be empty</string>
    <string name="username_not_empty">Username must not be empty</string>
    <string name="menu_item_title">Offers list</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="exTitle">title</string>
    <string name="exPrice">price</string>
    <string name="exDescription">description</string>
    <string name="add_offer">Add offer</string>
    <string name="remove_offer">Remove Offer</string>
    <string name="logout">Sign out</string>
    <string name="return_back">Offers List</string>
    <string name="menu_item_clear_favorits">Clear favorites</string>
    <string name="menu_item_reset_list">Reset List</string>
    <string name="title_activity_expand_excursion">ExpandExcursion</string>
    <string name="addToFavourits">Add to favorites</string>
    <string name="addToFavourites">Add to favorites</string>
    <string name="removeFromFavorites">Remove from Favorites</string>
    <string name="exCounter">0</string>
    <string name="menu_item_clear_favorites">Reset favorites</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_item_chat_with_us">Chat with us</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="saved_username">none</string>
    <string name="both_designs">Both designs</string>
    <string name="design_2">Design 2</string>
    <string name="design_1">Design 1</string>
</resources>
