<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/exTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exTitle"
        android:textSize="32sp"
        android:layout_alignParentTop="true"
        android:textColor="@color/colorBlack"
        android:layout_alignStart="@+id/exDescription" />


    <ImageView
        android:layout_width="@dimen/excursion_img_width"
        android:layout_height="@dimen/excursion_img_height"
        android:id="@+id/exImage"
        android:layout_below="@id/exTitle"
        android:src="@drawable/offer_1"
        android:scaleType="fitXY"
        android:layout_alignStart="@+id/exTitle"
        android:layout_alignEnd="@+id/exPrice" />
    <TextView
        android:id="@+id/exPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exPrice"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:layout_alignBottom="@+id/exImage"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp" />
    <TextView
        android:id="@+id/exDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exDescription"
        android:layout_below="@+id/exPrice"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="20dp" />


</RelativeLayout>